--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <link rel="shortcut icon" type="image/ico" href="/src/assets/favicon.ico" />
-    <title>Solid App</title>
+    <title>List of breweries</title>
+    <meta name="description" content="Example Solid JS Page." />
+    <meta name="keywords" content="Example Solid JS Page, UltiRequiem SolidJS" />
+    <meta name="author" content="Eliaz Bobadilla" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
