--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <link rel="shortcut icon" type="image/ico" href="/assets/favicon.bd42b22f.ico" />
+    <link rel="shortcut icon" type="image/ico" href="/solidjs-tailwinds-hello-world/assets/favicon.bd42b22f.ico" />
     <title>List of breweries</title>
     <meta name="description" content="Example Solid JS Page." />
     <meta name="keywords" content="Example Solid JS Page, UltiRequiem SolidJS" />
     <meta name="author" content="Eliaz Bobadilla" />
-    <script type="module" crossorigin src="/assets/index.a116e09c.js"></script>
-    <link rel="modulepreload" href="/assets/vendor.ea373d5e.js">
-    <link rel="stylesheet" href="/assets/index.7dfb5a10.css">
+    <script type="module" crossorigin src="/solidjs-tailwinds-hello-world/assets/index.3234b762.js"></script>
+    <link rel="modulepreload" href="/solidjs-tailwinds-hello-world/assets/vendor.ea373d5e.js">
+    <link rel="stylesheet" href="/solidjs-tailwinds-hello-world/assets/index.7b047ed5.css">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
